Closed Bug 1489728 Opened 6 years ago Closed 6 years ago

Permafailing z:/build/build/src/xpcom/base/ErrorNames.cpp(33): error C2660: 'nsTSubstring<char>::AssignLiteral': function does not take 1 arguments

Categories

(Core :: XPCOM, defect, P5)

defect

Tracking

()

RESOLVED FIXED
mozilla64
Tracking Status
firefox64 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: glandium)

References

Details

(Keywords: intermittent-failure)

Attachments

(1 file)

Filed by: dvarga [at] mozilla.com

https://treeherder.mozilla.org/logviewer.html#?job_id=198198921&repo=mozilla-central

https://queue.taskcluster.net/v1/task/Dfvlcj6URuCExo2mZfXNHA/runs/0/artifacts/public/logs/live_backing.log

04:11:54     INFO -  mozmake.EXE[4]: Leaving directory 'z:/build/build/src/obj-firefox/media/libvpx'
04:11:54     INFO -  mozmake.EXE[4]: Entering directory 'z:/build/build/src/obj-firefox/media/libvpx'
04:11:54     INFO -  mozmake.EXE[4]: Leaving directory 'z:/build/build/src/obj-firefox/media/libvpx'
04:11:54     INFO -  mozmake.EXE[4]: Entering directory 'z:/build/build/src/obj-firefox/xpcom/base'
04:11:54     INFO -  z:/build/build/src/obj-firefox/_virtualenvs/init/Scripts/python.exe -m mozbuild.action.cl  z:/build/build/src/vs2017_15.6.6/VC/bin/Hostx64/x64/cl.exe -FoUnified_cpp_xpcom_base0.obj -c  -Iz:/build/build/src/obj-firefox/dist/stl_wrappers -DDEBUG=1 -DWIN32_LEAN_AND_MEAN -D_WIN32 -DWIN32 -D_CRT_RAND_S -DCERT_CHAIN_PARA_HAS_EXTRA_FIELDS -DOS_WIN=1 -D_UNICODE -DCHROMIUM_BUILD -DU_STATIC_IMPLEMENTATION -DUNICODE -D_WINDOWS -D_SECURE_ATL -DCOMPILER_MSVC -DSTATIC_EXPORTABLE_JS_API -DMOZ_HAS_MOZGLUE -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -Iz:/build/build/src/xpcom/base -Iz:/build/build/src/obj-firefox/xpcom/base -Iz:/build/build/src/obj-firefox/ipc/ipdl/_ipdlheaders -Iz:/build/build/src/ipc/chromium/src -Iz:/build/build/src/ipc/glue -Iz:/build/build/src/xpcom/build -Iz:/build/build/src/dom/base -Iz:/build/build/src/xpcom/ds -Iz:/build/build/src/obj-firefox/dist/include -Iz:/build/build/src/obj-firefox/dist/include/nspr -Iz:/build/build/src/obj-firefox/dist/include/nss -MD -FI z:/build/build/src/obj-firefox/mozilla-config.h -DMOZILLA_CLIENT -utf-8 -TP -nologo -w15038 -wd5026 -wd5027 -Zc:sizedDealloc- -wd4091 -wd4577 -D_HAS_EXCEPTIONS=0 -W3 -Gy -Zc:inline -Gw -wd4251 -wd4244 -wd4267 -wd4800 -wd4595 -wd4065 -we4553 -D_SILENCE_TR1_NAMESPACE_DEPRECATION_WARNING -GR- -Zi -O1 -Oi -Oy- -WX    -Fdgenerated.pdb -FS  z:/build/build/src/obj-firefox/xpcom/base/Unified_cpp_xpcom_base0.cpp
04:11:54     INFO -  Unified_cpp_xpcom_base0.cpp
04:11:54     INFO -  z:/build/build/src/xpcom/base/ErrorNames.cpp(33): error C2660: 'nsTSubstring<char>::AssignLiteral': function does not take 1 arguments
04:11:54     INFO -  z:/build/build/src/config/rules.mk:1110: recipe for target 'Unified_cpp_xpcom_base0.obj' failed
04:11:54     INFO -  mozmake.EXE[4]: *** [Unified_cpp_xpcom_base0.obj] Error 2
04:11:54     INFO -  mozmake.EXE[4]: Leaving directory 'z:/build/build/src/obj-firefox/xpcom/base'
04:11:54     INFO -  mozmake.EXE[4]: *** Waiting for unfinished jobs....
04:11:54     INFO -  mozmake.EXE[4]: Entering directory 'z:/build/build/src/obj-firefox/config/external/icu/common'
04:11:54     INFO -  z:/build/build/src/obj-firefox/_virtualenvs/init/Scripts/python.exe -m mozbuild.action.cl  z:/build/build/src/vs2017_15.6.6/VC/bin/Hostx64/x64/cl.exe -Foumath.obj -c  -DDEBUG=1 -DU_COMMON_IMPLEMENTATION -DUCONFIG_NO_TRANSLITERATION -DUCONFIG_NO_REGULAR_EXPRESSIONS -DUCONFIG_NO_LEGACY_CONVERSION -DU_USING_ICU_NAMESPACE=0 -DU_NO_DEFAULT_INCLUDE_UTF_HEADERS=1 -DU_CHARSET_IS_UTF8 -DU_HAVE_NL_LANGINFO_CODESET=0 -DU_DEBUG=1 -Iz:/build/build/src/config/external/icu/common -Iz:/build/build/src/obj-firefox/config/external/icu/common -Iz:/build/build/src/intl/icu/source/i18n -Iz:/build/build/src/obj-firefox/dist/include -Iz:/build/build/src/obj-firefox/dist/include/nspr -Iz:/build/build/src/obj-firefox/dist/include/nss -MD -FI z:/build/build/src/obj-firefox/mozilla-config.h -DMOZILLA_CLIENT -utf-8 -TP -nologo -w15038 -wd5026 -wd5027 -Zc:sizedDealloc- -wd4091 -wd4577 -D_HAS_EXCEPTIONS=0 -W3 -Gy -Zc:inline -Gw -wd4251 -wd4244 -wd4267 -wd4800 -wd4595 -wd4065 -we4553 -D_SILENCE_TR1_NAMESPACE_DEPRECATION_WARNING -GR -Zi -O1 -Oi -Oy- -wd4005 -wd4333 -wd4996    -Fdgenerated.pdb -FS  z:/build/build/src/intl/icu/source/common/umath.cpp
04:11:54     INFO -  umath.cpp
04:11:54     INFO -  mozmake.EXE[4]: Leaving directory 'z:/build/build/src/obj-firefox/config/external/icu/common'
04:11:54     INFO -  mozmake.EXE[4]: Entering directory 'z:/build/build/src/obj-firefox/config/external/icu/common'
04:11:54     INFO -  mozmake.EXE[4]: Leaving directory 'z:/build/build/src/obj-firefox/config/external/icu/common'
Mike can you please take a look at this?
Flags: needinfo?(mh+mozilla)
Assignee: nobody → mh+mozilla
Flags: needinfo?(mh+mozilla)
MSVC doesn't like AssignLiteral(condition ? "literal1" : "literal2")
even when both literals have the same length. (clang and gcc are both
happy with that)
Comment on attachment 9007428 [details]
Bug 1489728 - Unbreak MSVC builds after bug 1489363

Nathan Froyd [:froydnj] has approved the revision.
Attachment #9007428 - Flags: review+
https://hg.mozilla.org/mozilla-central/rev/8a60c20c3dca
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla64
Component: String → XPCOM
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: